[gd_scene load_steps=5 format=2]

[ext_resource path="res://mainScene.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/a.png-bb8a5c4a3aefa9bd4dda7c06f9f81f63.stex"

[node name="mainScene" type="Area2D"]
script = ExtResource( 1 )

[node name="newAnchorTimer" type="Timer" parent="."]
wait_time = 0.61

[node name="newObstacleTimer" type="Timer" parent="."]

[node name="Player" type="Area2D" parent="."]
position = Vector2( -33.9273, -13.2368 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Collision" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Player"]
position = Vector2( -5.96046e-08, 5.96046e-08 )
scale = Vector2( 0.273568, 0.273568 )
texture = SubResource( 2 )
[connection signal="timeout" from="newAnchorTimer" to="." method="_on_newAnchorTimer_timeout"]
[connection signal="timeout" from="newObstacleTimer" to="." method="_on_newObstacleTimer_timeout"]
